--- a/marklist_css.html
+++ b/marklist_css.html
@@ -73,10 +73,10 @@
     <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Sample One</a>
+      <a class="navbar-brand" href="index.html">Sample One</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="personal_info_css.html">Personal Info</a></li>
       <li><a href="user_details.html">Add User</a></li>
     </ul>
