--- a/index.html
+++ b/index.html
@@ -35,5 +35,12 @@
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<p>This is a simple website demo for learn html js css and bootstrap.</p></div>
+<footer>
+	<div align="center">
+	<p>Created by: Ashbin mathew</p>
+	<p>ashbin.19pmc319@mcka.in</p>
+	<hr>
+	</div>
+</footer>
 </body>
 </html>
