--- a/personal_info_css.html
+++ b/personal_info_css.html
@@ -48,10 +48,10 @@
     <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Sample One</a>
+      <a class="navbar-brand" href="index.html">Sample One</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li class="active"><a href="personal_info_css.html">Personal Info</a></li>
       <li><a href="user_details.html">Add User</a></li>
     </ul>
@@ -73,6 +73,12 @@
       </div>
   	</div>
   </fieldset>
-
+<footer>
+	<div align="center">
+	<p>Created by: Ashbin mathew</p>
+	<p>ashbin.19pmc319@mcka.in</p>
+	<hr>
+	</div>
+</footer>
 </body>
 </html>
